# cmake-starter

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cc
